--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
     width: 100vw;
     height: 100vh;
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: center;
 }
 
@@ -31,15 +31,14 @@ body {
 }
 
 .card {
-    max-width:400px;
+    max-width: 400px;
     background-color: white;
-    border-radius: 6px;
+    width: 100vw;
+    max-width: 100vw;
 }
 
 .card-body, .card-head {
     padding: 4%;
-    border-top-left-radius: 6px;
-    border-top-right-radius: 6px;
 }
 
 .card-head {
@@ -90,12 +89,8 @@ body {
     padding-right: 10px;
 }
 
-.card button.cta {
-    color: #161616;
-}
-
-.card button.cta:hover > span {
-    animation: spin 1.5s linear infinite;
+.card button.cta:hover {
+    color: black;
 }
 
 .card button:hover {
@@ -130,12 +125,13 @@ input[type=text].copytext {
     color: white;
     font-size: 1.5em;
     text-align: center;
-    border-radius: 4px;
     padding: 2.5%;
+    padding-bottom: 10%;
     position: fixed;
     z-index: 1;
-    bottom: 5%;
+    bottom: 0;
     opacity: 0;
+    width: 100vw;
 }
 
 .show {
@@ -179,28 +175,27 @@ input[type=text].copytext {
     }
 }
 
-@media (max-width: 600px) {
+@media (min-width: 600px) {
     .container {
-        align-items: flex-start;
+        align-items: center;
     }
 
     .card {
-        border-radius: 0;
-        margin: 0;
-        width: 100vw;
-        max-width: 100vw;
+        border-radius: 6px;
+        width: 50vw;
+        min-width: 400px;
     }
     
     .card-body, .card-head {
-        border-radius: 0;
+        border-top-left-radius: 6px;
+        border-top-right-radius: 6px;
     }
 
     .toast {
-        visibility: visible;
-        border-radius: 0;
-
-        width: 100vw;
-        padding-bottom: 10%;
-        bottom: 0;
+        border-radius: 4px;
+        width: 50vw;
+        min-width: calc(400px - 5%);
+        padding-bottom: 2.5%;
+        bottom: 5%;
     }
 }
