--- a/css/main.scss
+++ b/css/main.scss
@@ -60,16 +60,11 @@ body {
         font-size: 1.4em;
 
         .area-options {
-            display: flex;
-            justify-content: space-between;
-            flex-wrap: wrap;
+            display: grid;
+            grid-template-columns: 1fr 1fr;
             padding: 1em;
 
             .checkbox {
-                flex-basis: 0;
-                flex-grow: 1;
-                width: 50%;
-
                 display: flex;
                 align-items: center;
                 justify-content: flex-start;
@@ -82,7 +77,7 @@ body {
                 }
 
                 label {
-                    padding-left: .1em;
+                    padding-left: .5em;
                 }
             }
         }
