--- a/css/main.scss
+++ b/css/main.scss
@@ -14,6 +14,8 @@ body {
 }
 
 .card {
+    // position: relative;
+    // overflow: hidden;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -133,5 +135,29 @@ body {
 }
 
 .toast {
-    display: none;
+    position: absolute;
+    z-index: 101;
+    top: 25vh;
+    left: 0;
+    right: 0;
+    margin: 10vw;
+    
+    color: white;
+    background-color: #333;
+    text-align: center;
+    line-height: 2.5;
+    overflow: hidden;
+    box-shadow: 0 0 5px black;
+
+    transform: translateX(-101vw);
+
+    &.show {
+        animation: slideIn 2.5s 1s 1 ease forwards,
+                   slideIn 2.5s 4.5s 1 ease reverse;
+    }
+}
+
+@keyframes slideIn {
+    from { transform: translateX(-101vw); }
+    to { transform: translateX(0vw); }
 }
