--- a/css/main.css
+++ b/css/main.css
@@ -97,6 +97,15 @@ body {
   padding: 1em;
 }
 
+.card .card-body .area-length input[type=number] {
+  border: none;
+  border-radius: 4px;
+  font-size: 0.8em;
+  text-align: center;
+  padding: 0.4em;
+  background-color: #eee;
+}
+
 .card .card-body .area-length input[type=range] {
   -webkit-appearance: none;
      -moz-appearance: none;
