--- a/css/main.scss
+++ b/css/main.scss
@@ -3,7 +3,7 @@
 $heading-font: 'Major Mono Display', mono;
 $main-font: 'Ubuntu Mono', mono;
 
-$punctuation-color:rgba(16, 73, 179);
+$punctuation-color:rgb(16, 73, 179);
 $number-color: rgb(209, 52, 52);
 $cta-color: $punctuation-color;
 
@@ -88,6 +88,15 @@ body {
 
         .area-length {
             padding: 1em;
+
+            input[type=number] {
+                border: none;
+                border-radius: 4px;
+                font-size: 0.8em;
+                text-align: center;
+                padding: 0.4em;
+                background-color: #eee;
+            }
 
             input[type=range] {
                 appearance: none;
